2023-02-11 Roy Hills <royhills@hotmail.com>

	* configure.ac: Use "#" instead of "dnl" for comments so they appear
	  in the generated "configure" file.

2023-02-10 Roy Hills <royhills@hotmail.com>

	* utils.c: Simplify the timeval_diff() function.

2023-02-09 Roy Hills <royhills@hotmail.com>

	* README.md, arp-fingerprint.1, arp-scan.1.dist, mac-vendor.txt:
	  Updated references to the arp-scan wiki URL to use the github
	  wiki at https://github.com/royhills/arp-scan/wiki.

2023-02-04 Roy Hills <royhills@hotmail.com>

	* arp-scan.h: Disable promiscuous mode on the network interface.
	  Promiscuous mode is not required to receive ARP response packets
	  because they are unicast packets directed to the scanning host.
	  Thanks to @annube for reporting this issue.

2023-02-03 Roy Hills <royhills@hotmail.com>

	* arp-scan.c: Call pcap_freecode() to free the BPF program after
	  calling pcap_setfilter().  Thanks to @icy17 for the issue report.

2023-01-28 Roy Hills <royhills@hotmail.com>

	* arp-scan.c, configure.ac: Call pledge(2) to force the process into
	  restricted-service mode once initial setup is complete if we have
	  the pledge() system call (currently only on OpenBSD). Thanks to
	  @sthen for the patch.

2023-01-27 Roy Hills <royhills@hotmail.com>

	* README.md: Updated.

2023-01-26 Roy Hills <royhills@hotmail.com>

	* mac-vendor.txt: Incorporate OpenBSD patch for version 1.10.0 to this
	  file to add CARP, IPv6 VRRPv3 and OpenBSD random MAC addresses.
	  Thanks to @sthen for the patch.

	* link-bpf.c: Incorporate OpenBSD patch for version 1.10.0 to this
	  file to skip messages with incorrect version. This is applicable to
	  all BPF users (FreeBSD, OpenBSD, NetBSD, DragonflyBSD and macOS).
	  Thanks to @sthen for this patch.

	* .github/workflows/c-cpp.yml, .github/workflows/code-coverage.yml:
          Added "sudo make install" and "arp-scan -vv --localnet --limit=1"
          to Ubuntu build and coveralls coverage run. This increases